commit changes; bump jquery version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8443
 security.require-ssl=true
-server.ssl.key-store: rock-paper-scissors.jks
-server.ssl.key-store-password: rock-paper-scissors
-server.ssl.keyStoreType: JKS
-server.ssl.keyAlias: rock-paper-scissors
+server.ssl.key-store=rock-paper-scissors.jks
+server.ssl.key-store-password=rock-paper-scissors
+server.ssl.key-store-type=JKS
+#reactor.netty.http.server.accessLogEnabled=true
